@@ -79,6 +79,8 @@ Version 1.7.0-svn:
      special
    * Fix missing faction column when waiting that the host start the game,
      plus some other unwanted changes there (bug #13243)
+   * Make delayed shroud updates and scenarion objectives to change and 
+     show information for viewing team. (help in bug #13313)
    * Making the game return to the add-on install dialog just before
      installing one, and with its entry selected
    * Implemented FR #13321: added "unit advances=N" command to debug console
